--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<li id="menu-item-53" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-53"><a href="index.html#eventsAndWorkshops"><span>Events & Workshops</span></a></li>
 								<li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="index.html#gl"><span>Guest Lectures</span></a></li>
 								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href="index.html#highlights"><span>Highlights</span></a></li>
-								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href="index.html#footer"><span>Footer</span></a></li>
+								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href="xceed.html"><span>Xceed</span></a></li>
 								
 							</ul>
 							<div class="clearfix"></div>
