--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
 								<li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="index.html#gl"><span>Guest Lectures</span></a></li>
 								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href="index.html#highlights"><span>Highlights</span></a></li>
 								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href="xceed.html"><span>Xceed</span></a></li>
-								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href='#' data-toggle="modal" data-target=".bd-example-modal-lg"><span>Sponsors</span></a></li>
+								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href='#' data-toggle="modal" data-target=".sponsors"><span>Sponsors</span></a></li>
+								<li id="menu-item-133" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href='#' data-toggle="modal" data-target=".about"><span>About</span></a></li>
 								
 							</ul>
 							<div class="clearfix"></div>
@@ -514,7 +515,7 @@
 			</section><!-- .section -->
 			
 			<!-- sponsors -->
-			<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			<div class="modal fade sponsors" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 				<div class="modal-dialog modal-lg">
 					<div class="modal-content">
 						<h3 style="text-align:center;margin-top:30px">Sponsors</h3>
@@ -522,6 +523,21 @@
 					</div>
 				</div>
 			</div>
+			
+			
+			<!-- about -->
+			
+			<div class="modal fade about" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<h3 style="text-align:center;margin-top:30px">About</h3>
+						<hr/>
+						
+					</div>
+				</div>
+			</div>
+			
+			
 			
 			
 			
