--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<script>
 			var myArr = new Array();
 			var xmlhttp = new XMLHttpRequest();
-			var url = "http://enct29fa5ae.kurukshetra.org.in/categories.json";
+			var url = "//enct29fa5ae.kurukshetra.org.in/categories.json";
 			
 			xmlhttp.onreadystatechange = function() {
 				if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
@@ -546,8 +546,8 @@
 		</div><!-- .main -->
 		
 		<!-- random color -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 		
 		<script type="text/javascript" src="js/randomColorMaster.js"></script>
 		<script>
