--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             	if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
             		myArr.push(JSON.parse(xmlhttp.responseText));
             		myFunction(myArr);
-            	}
+            }
             };
             xmlhttp.open("GET", url, true);
             xmlhttp.send();
@@ -281,60 +281,61 @@
                             </div>
                             <!-- .section-title-block -->
                             <div class="hi-icon-wrap hi-icon-effect-7 hi-icon-effect-7b domains events-details">
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <a class="hi-icon fa fa-gear"></a>
                                     <p>Engineering
                                 </div>
                                 </li>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-laptop"></a>
-                                    <p>Coding
-                                </div>
-                                <div class="col-sm-2">
-                                    <a href="#" class="hi-icon fa fa-terminal"></a>
-                                    <p>Online
-                                </div>
-                                <div class="col-sm-2">
-                                    <a href="#" class="hi-icon fa fa-money"></a>
-                                    <p>Management
-                                </div>
-                                <div class="col-sm-2">
-                                    <a href="#" class="hi-icon fa fa-android"></a>
                                     <p>Robotics
                                 </div>
-                                <div class="col-sm-2">
-                                    <a href="#" class="hi-icon fa fa-archive"></a>
+                                <div class="col-sm-3">
+                                    <a href="#" class="hi-icon fa fa-terminal"></a>
+                                    <p>Management
+                                </div>
+                                <div class="col-sm-3">
+                                    <a href="#" class="hi-icon fa fa-money"></a>
+                                    <p>Quiz
+                                </div>
+                                <div class="col-sm-3">
+                                    <a href="#" class="hi-icon fa fa-android"></a>
                                     <p>General
                                 </div>
-                                <div>
+                                <div class="col-sm-3">
+                                    <a href="#" class="hi-icon fa fa-archive"></a>
+                                    <p>Coding
+                                </div>
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-puzzle-piece"></a>
-                                    <p>Quizzes
+                                    <p>Online
                                 </div>
                                 <!-- events will come here -->
                                 <!-- workshop should come in tab -->
                             </div>
                             <div class="hi-icon-wrap hi-icon-effect-7 hi-icon-effect-7b domains_work workshops-details" style="display:none">
-                                <div class="col-sm-2">
-                                    <a href="#" class="hi-icon fa fa-gear"></a>
+                                <div class="col-sm-3">
+                                    <a class="hi-icon fa fa-gear"></a>
                                     <p>Engineering
                                 </div>
-                                <div class="col-sm-2">
+                                </li>
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-laptop"></a>
                                     <p>Coding
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-terminal"></a>
                                     <p>Online
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-money"></a>
                                     <p>Management
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-android"></a>
                                     <p>Robotics
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <a href="#" class="hi-icon fa fa-archive"></a>
                                     <p>General
                                 </div>
