--- a/index.html
+++ b/index.html
@@ -678,8 +678,6 @@
                                     </div>
                                     <br>
                                     <div class="form-group college">
-										<select id="collegeNames">
-										</select>
                                     </div>
                                     <div class="form-group courses">
                                     </div>
@@ -717,13 +715,13 @@
                                         <input id="email" type="text" class="form-control" name="email" placeholder="Your email-id">
                                     </div>
                                     <br>
-                                    <div class="form-group sacollege">
+                                    <div class="form-group college">
                                     </div>
-                                    <div class="form-group sacourses">
+                                    <div class="form-group courses">
                                     </div>
-                                    <div class="form-group sadegree">
+                                    <div class="form-group degree">
                                     </div>
-                                    <div class="form-group sayear">
+                                    <div class="form-group year">
                                     </div>
                                     <button type="submit" class="btn btn-default">REGISTER AS STUDENT AMBASSDOR</button>
                                 </form>
@@ -876,6 +874,8 @@
         <script type="text/javascript">
             $(window).load(function(){
             	$('#cr-container').crotator();
+				populateForm();
+
             });
         </script>
         <script type='text/javascript'>
