--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <!-- .section -->
             <!-- events and workshops -->
             <section class="section  random"
-                data-background-image="img/events.jpg"
+                data-background-image="img/events.gif"
                 data-background="rgba(255,247,204,0.80)"
                 data-shadow=""
                 data-nav-color="#d73e4d"
@@ -407,7 +407,7 @@
             <!-- .section -->
             <!--Xceed-->
             <section class="section  random"
-                data-background-image="img/xceed.jpg"
+                data-background-image="img/xceed.gif"
                 data-background="rgba(10, 79, 67, 0.870588)"
                 data-shadow=""
                 data-nav-color="#d73e4d"
@@ -436,7 +436,7 @@
             <!-- .section -->
             <!--Hospitality-->
             <section class="section  random"
-                data-background-image="img/hospi.jpg"
+                data-background-image="img/hospi.gif"
                 data-background="rgba(10, 79, 67, 0.870588)"
                 data-shadow=""
                 data-nav-color="#d73e4d"
@@ -554,7 +554,7 @@
             </section>
             <!-- footer and contact -->
             <section class="section  random"
-                data-background-image="img/footer.jpg"
+                data-background-image="img/contact.gif"
                 data-background=""
                 data-shadow=""
                 data-nav-color=""
