--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
             </section>
             <!-- footer and contact -->
             <section class="section  random"
-                data-background-image="img/contact.gif"
+                data-background-image="img/footer.jpg"
                 data-background=""
                 data-shadow=""
                 data-nav-color=""
