removed bootstrap import

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <link rel='stylesheet' href="css/res.css">
 		
 		<!-- bootstrap -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+		<!-- Latest compiled and minified CSS -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+
 		
 		
 		
@@ -881,8 +883,9 @@
         <script type="text/javascript" src="js/randomColorMaster.js"></script>
 		
 		<!-- bootstrap -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-        <script>
+		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+        
+		<script>
             $(document).ready(function randomBackground(){
             	num2 = 0.8;
             	var num1 = randomColor({luminosity: 'dark', hue: 'monochrome', format: 'rgbArray'});
@@ -909,7 +912,7 @@
         <script type="text/javascript" src="js/about/jquery.crotator.js"></script>
         <script src="js/hospi/cbpFWTabs.js"></script>
         <script src="js/list.js"></script>
-        <script type="text/javascript" src="js/about/jquery.mousewheel.js"></script>
+        <!-- <script type="text/javascript" src="js/about/jquery.mousewheel.js"></script> -->
         <script type="text/javascript">
             $(window).load(function(){
             	$('#cr-container').crotator();
