--- a/events.html
+++ b/events.html
@@ -67,7 +67,7 @@
 		<script>
 			var myArr = new Array();
 			var xmlhttp = new XMLHttpRequest();
-			var url = "http://cms16.kurukshetra.org.in/events.json";
+			var url = "http://enct29fa5ae.kurukshetra.org.in/events.json";
 			
 			xmlhttp.onreadystatechange = function() {
 				if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
