--- a/sa.html
+++ b/sa.html
@@ -64,7 +64,7 @@
 				}
 				.reicon
 				{
-					color:white;
+					color:#d73e4d;
 				}
 				@media screen and (max-width: 800px) 
 				{
@@ -121,27 +121,27 @@
 						<div style="padding-top:90px;" align="center">
 							<form style="position: relative; width:70%; background-color:#f2efef; padding-bottom:50px; padding-left:50px; padding-right:50px; padding-top:50px;" id="register" onsubmit="Validate(this)">
 								<div class="input-group">
-									<span class="input-group-addon random"><i class="reicon glyphicon glyphicon-user"></i></span>
+									<span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
 									<input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)">
 								</div>
 								<br>
 								<div class="input-group">
-									<span class="input-group-addon random"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
+									<span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
 									<input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)">
 								</div>
 								<br>                            
 								<div class="input-group">
-									<span class="input-group-addon random"><i class="reicon fa fa-envelope"></i></span>
+									<span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
 									<input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)">
 								</div>
 								<br>
 								<div class="input-group">
-									<span class="input-group-addon random"><i class="reicon glyphicon glyphicon-lock"></i></span>
+									<span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
 									<input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters long)" onblur="validatepass(this)">
 								</div>
 								<br/>
 								<div class="input-group">
-									<span class="input-group-addon random"><i class="reicon fa fa-calendar"></i></span>
+									<span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
 									<input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
 								</div>
 								<div class="input-group radio">
