--- a/sa.html
+++ b/sa.html
@@ -144,6 +144,7 @@
 									<span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
 									<input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
 								</div>
+								<br/>
 								<div class="input-group radio">
 									Gender:
 									<label class="radio-inline">
@@ -182,10 +183,10 @@
 	<script type="text/javascript" src="js/randomColorMaster.js"></script>
 	<script>
 		$(document).ready(function randomBackground(){
-			num2 = 0.8;
-			var num1 = randomColor({luminosity: 'random', hue: 'random', format: 'rgbArray'});
+			num2 = 0.2;
+			var num1 = randomColor({luminosity: 'dark', hue: 'green', format: 'rgbArray'});
 			$(".random").animate({"background-color":"rgba("+num1[0]+","+num1[1]+","+num1[2]+","+num2+")"}, 5000);
-			setTimeout(randomBackground, 5000);
+			setTimeout(randomBackground, 1000);
 		});
 	</script>
 	<script>
@@ -204,7 +205,7 @@
 	<script>
             //populate form
             $(document).ready(function() {
-            	populateForm();
+	            	populateForm();
             });
         </script>
         <script type='text/javascript' src='js/list.js'></script>
