fixed nav colors

--- a/events.html
+++ b/events.html
@@ -128,13 +128,13 @@
 
 
 								<ul class="dropdown-menu" role="menu">
-									<li><a href="#" id="Engineering" onclick='swapDomains(this);' class="active">Engineering</a></li>
-									<li><a href="#" id="Online" onclick='swapDomains(this);'>Online</a></li>
-									<li><a href="#" id="Coding" onclick='swapDomains(this);'>Coding</a></li>
-									<li><a href="#" id="Management" onclick='swapDomains(this);'>Management</a></li>
-									<li><a href="#" id="Robotics" onclick='swapDomains(this);'>Robotics</a></li>
-									<li><a href="#" id="General" onclick='swapDomains(this);'>General</a></li>
-									<li><a href="#" id="Quiz" onclick='swapDomains(this);'>Quiz</a></li>
+									<li><a href="#" id="Engineering" onclick='swapDomains(this);' class="active" style="font-family: 'Aref Ruqaa', serif;">Engineering</a></li>
+									<li><a href="#" id="Online" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Online</a></li>
+									<li><a href="#" id="Coding" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Coding</a></li>
+									<li><a href="#" id="Management" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Management</a></li>
+									<li><a href="#" id="Robotics" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Robotics</a></li>
+									<li><a href="#" id="General" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">General</a></li>
+									<li><a href="#" id="Quiz" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Quiz</a></li>
 
 								</ul>
 
@@ -170,7 +170,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title" style="text-align:center;margin-top:30px"></h4>
+						<h2 class="modal-title" style="text-align:center;margin-top:30px"></h2>
 					</div>
 					<div class="modal-body" style="color:black">
 
