fixed events&workshops nav

--- a/events.html
+++ b/events.html
@@ -72,7 +72,7 @@
 			data-background-image="img/ceg.gif"
 			data-background="rgba(30,45,58,0.80)"
 			data-shadow=""
-			data-nav-color="#ffffff"
+			data-nav-color="rgba(30,45,58,0)"
 			data-nav-color-text="#1e2d3a"
 			data-color="#ffffff"
 			data-title-color="#ffffff"
