--- a/workshops.html
+++ b/workshops.html
@@ -23,10 +23,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 
 	<!-- h2 font -->
-	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Reem+Kufi" rel="stylesheet">     
+	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Reem+Kufi" rel="stylesheet">   
 
-	<!--hospitality-->
-	<link rel="stylesheet" type="text/css" href="css/hospi/demo.css" />
+	<!-- p font -->
+	<link href="http://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">  
+
 	<!-- event and workshop -->
 	<link rel="stylesheet" type="text/css" href="css/eventIcons.css" />
 	<style type='text/css'>
@@ -41,6 +42,14 @@
 			.unescodiv {
 				display:none;
 			}
+		}
+		p {
+			padding: 0.1em;
+			font-size:16px;
+			overflow-y:auto;
+			max-height:320px;
+			font-family: 'Raleway', Arial, sans-serif;
+
 		}
 	</style>
 	<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
