--- a/workshops.html
+++ b/workshops.html
@@ -76,7 +76,9 @@
 	<div class="preloader">
 		<span class="loader"><span class="loader-inner"></span></span>
 	</div>
-	<div class="main" data-nav-position="left">			
+	<span class="cssload-loader workshops-loader"><span class="cssload-loader-inner"></span></span>
+
+	<div class="main" data-nav-position="left" style="display: none">			
 		<section class="section  random"
 		data-background-image="img/ceg.gif"
 		data-background="rgba(30,45,58,0.80)"
@@ -150,7 +152,6 @@
 						</div><!-- .filter-buttons -->
 					</div>
 				</div><!-- .section-title-block -->
-				<span class="cssload-loader"><span class="cssload-loader-inner"></span></span>
 				<div class="hi-icon-wrap hi-icon-effect-7 hi-icon-effect-7b events">							
 					<!-- events will come here -->
 
