--- a/events.html
+++ b/events.html
@@ -17,16 +17,6 @@
 	<link rel='stylesheet' href="css/loader.css">
 	<link rel='stylesheet' href="css/initiatives.css">
 	<link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css'/>
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Proza+Libre"/>
-
-	<!-- h1 font -->
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
-
-	<!-- h2 font -->
-	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Reem+Kufi" rel="stylesheet">     
-
-	<!-- p font -->
-	<link href="http://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
 
 	<!-- event and workshop -->
 	<link rel="stylesheet" type="text/css" href="css/eventIcons.css" />
@@ -242,14 +232,29 @@
 <script type='text/javascript' src='assets/js/bootstrap-datepicker.min68b3.js'></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
 <script type='text/javascript' src='assets/js/isotope.pkgd.min68b3.js?ver=1'></script>
-
-<!-- typed js -->
-<script type='text/javascript' src='js/typed.min.js'></script>
-
-
-<!-- form data -->
-<script src="js/list.js"></script>
 <script type='text/javascript' src='assets/js/main68b3.js'></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+<script>
+	WebFont.load({
+		google: {
+			families: ['Abril Fatface', 'Aref Ruqaa', 'Raleway:400,500,700']
+		}
+	});
+</script>
+<noscript>
+	<!-- h1 font -->
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+
+	<!-- h2 font -->
+	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">     
+
+	<!-- p font -->
+	<link href="http://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
+
+</noscript>
+
+
 
 </body>
 </html>    
