--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
 	<meta class="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="shortcut icon" href="img/favicon.ico">
-	<title>Kurukshetra'17</title>
+	<title>K'17 | Events</title>
 	<link rel='stylesheet' href='assets/css/bootstrap3a05.css' type='text/css' media='all' />
 	<link rel='stylesheet' href='assets/css/font-awesome.min3a05.css' type='text/css' media='all' />
 	<link rel='stylesheet' href='assets/css/animate.min3a05.css' type='text/css' media='all' />
