--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
 
 	<div class="main" data-nav-position="left" style="display: none">			
 		<section class="section  random"
-		data-background-image="img/ceg.gif"
+		data-background-image=""
 		data-background="rgba(30,45,58,0.80)"
 		data-shadow=""
 		data-nav-color="rgba(30,45,58,0)"
@@ -217,7 +217,7 @@
 		}
 	};
 	xmlhttp.open("GET", url, true);
-	xmlhttp.setRequestHeader('origin', 'http');
+	//xmlhttp.setRequestHeader('origin', 'http');
 
 	xmlhttp.send();
 
