--- a/events.html
+++ b/events.html
@@ -69,7 +69,7 @@
 	</div>
 	<span class="cssload-loader events-loader"><span class="cssload-loader-inner"></span></span>
 
-	<div class="main" data-nav-position="left" style="display: none">			
+	<div class="main" data-nav-position="left" style="">			
 		<section class="section  random"
 		data-background-image=""
 		data-background="rgba(30,45,58,0.80)"
@@ -78,8 +78,8 @@
 		data-nav-color-text="#1e2d3a"
 		data-color="#ffffff"
 		data-title-color="#ffffff"
-		data-title="Home"
-		data-anchor="home-section">
+		data-title="Events"
+		data-anchor="events">
 
 
 
@@ -121,71 +121,74 @@
 
 			<div class="container section-wrap"
 			style="">
-			<div class="filter-box works-box">
-				<div class="row section-title-block">
-					<h1 class="col-sm-4 section-title" data-appear-animation="fadeInLeftBig" data-appear-animation-delay="500">Events</h1>
+			<div class="row">
+				<div class="filter-box works-box">
+					<div class="row section-title-block">
+						<h1 class="col-sm-4 section-title" data-appear-animation="fadeInLeftBig" data-appear-animation-delay="500">Events</h1>
 
-					<div class="col-sm-8 text-right" data-appear-animation="fadeInRightBig" data-appear-animation-delay="500">
-						<div class="btn-group filter-buttons filter-list">
-							<button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown">
-							</button>
-
-
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#" id="Engineering" onclick='swapDomains(this);' class="active" style="font-family: 'Aref Ruqaa', serif;">Engineering</a></li>
-								<li><a href="#" id="Online" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Online</a></li>
-								<li><a href="#" id="Coding" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Coding</a></li>
-								<li><a href="#" id="Management" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Management</a></li>
-								<li><a href="#" id="Robotics" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Robotics</a></li>
-								<li><a href="#" id="General" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">General</a></li>
-								<li><a href="#" id="Quiz" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Quiz</a></li>
-
-							</ul>
+						<div class="col-sm-8 text-right" data-appear-animation="fadeInRightBig" data-appear-animation-delay="500">
+							<div class="btn-group filter-buttons filter-list">
+								<button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown">
+								</button>
 
 
-							<div class="clearfix"></div>
-						</div><!-- .filter-buttons -->
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#" id="Engineering" onclick='swapDomains(this);' class="active" style="font-family: 'Aref Ruqaa', serif;">Engineering</a></li>
+									<li><a href="#" id="Online" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Online</a></li>
+									<li><a href="#" id="Coding" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Coding</a></li>
+									<li><a href="#" id="Management" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Management</a></li>
+									<li><a href="#" id="Robotics" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Robotics</a></li>
+									<li><a href="#" id="General" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">General</a></li>
+									<li><a href="#" id="Quiz" onclick='swapDomains(this);' style="font-family: 'Aref Ruqaa', serif;">Quiz</a></li>
+
+								</ul>
+
+
+								<div class="clearfix"></div>
+							</div><!-- .filter-buttons -->
+						</div>
+					</div><!-- .section-title-block -->
+					<div class="hi-icon-wrap hi-icon-effect-7 hi-icon-effect-7b events">							
+						<!-- events will come here -->
+
+
+
+
 					</div>
-				</div><!-- .section-title-block -->
-				<div class="hi-icon-wrap hi-icon-effect-7 hi-icon-effect-7b events">							
-					<!-- events will come here -->
-
-
 
 
 				</div>
 
 
 			</div>
-
-
-
 		</div>
 	</div><!-- .section-content -->
+</section>
 
 
 
-	<!-- events details -->
-	<!-- Modal -->
-	<div id="eventsDetails" class="modal fade" role="dialog">
-		<div class="modal-dialog modal-lg">
 
-			<!-- Modal content-->
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h2 class="modal-title" style="text-align:center;margin-top:30px"></h2>
-				</div>
-				<div class="modal-body" style="color:black">
+<!-- events details -->
+<!-- Modal -->
+<div id="eventsDetails" class="modal fade" role="dialog">
+	<div class="modal-dialog modal-lg">
 
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
+		<!-- Modal content-->
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h2 class="modal-title" style="text-align:center;margin-top:30px"></h2>
 			</div>
+			<div class="modal-body" style="color:black">
 
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>
 		</div>
+
 	</div>
+</div>
 
 
 </div><!-- .main -->
@@ -198,8 +201,8 @@
 <script type="text/javascript" src="js/randomColorMaster.js"></script>
 <script>
 	$(document).ready(function randomBackground(){
-		num2 = 0.8;
-		var num1 = randomColor({luminosity: 'dark', hue: 'monochrome', format: 'rgbArray'});
+		num2 = 0.3;
+		var num1 = randomColor({luminosity: 'dark', hue: 'random', format: 'rgbArray'});
 		$(".random").animate({"background-color":"rgba("+num1[0]+","+num1[1]+","+num1[2]+","+num2+")"}, 5000);
 		setTimeout(randomBackground, 5000);
 	});
