--- a/events.html
+++ b/events.html
@@ -243,35 +243,38 @@
 <script type="text/javascript" src="js/particleground.min.js"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
+		if($(window).width() >= 900){
+
             // initialize particles
             $('.particle').particleground({
             	dotColor: '#ffffff',
             	density: 20000,
             	proximity: 100
             });
-        });
-    </script>
+        }
+    });
+</script>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-    <script>
-    	WebFont.load({
-    		google: {
-    			families: ['Abril Fatface', 'Aref Ruqaa', 'Raleway:400,500,700']
-    		}
-    	});
-    </script>
-    <noscript>
-    	<!-- h1 font -->
-    	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+<script>
+	WebFont.load({
+		google: {
+			families: ['Abril Fatface', 'Aref Ruqaa', 'Raleway:400,500,700']
+		}
+	});
+</script>
+<noscript>
+	<!-- h1 font -->
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 
-    	<!-- h2 font -->
-    	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">     
+	<!-- h2 font -->
+	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">     
 
-    	<!-- p font -->
-    	<link href="http://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
+	<!-- p font -->
+	<link href="http://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
 
-    </noscript>
+</noscript>
 
 
 
