--- a/events.html
+++ b/events.html
@@ -16,6 +16,7 @@
 	<link rel='stylesheet' href="css/res.css">
 	<link rel='stylesheet' href="css/loader.css">
 	<link rel='stylesheet' href="css/initiatives.css">
+	<link rel='stylesheet' href="css/scroll.css">
 	<link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css'/>
 
 	<!-- event and workshop -->
@@ -99,13 +100,16 @@
 					</div>
 
 
-					<div class="col-xs-3 col-sm-4 logo-box" id="two"><img src="img/k orange white.png" style="margin-left: 10px; height: auto; margin-top: 5px; width: 75%;">
+					<div class="col-xs-4 col-sm-4 klogo logo-box">
+						<center><img src="img/k orange white.png" style="height: auto;width:75%;"></center>
 					</div>
-
-					<div class="col-xs-3 col-sm-4 logo-box" id="three">
+					<!--div class="col-xs-3 col-sm-4 logo-box" id="three">
 
 						<img src="img/unesco white and blue1.png" style=" height: auto;width: 60%;margin-top: -5px;margin-left:200px;">
 
+					</div-->
+					<div align="right" class="col-xs-4 col-sm-4 logo-box unescodiv" id="three">                             
+						<img src="img/unesco white and blue1.png" style="height: auto;width: 55%;">                           
 					</div>                    
 				</div>
 			</div>
@@ -251,7 +255,18 @@
             	density: 20000,
             	proximity: 100
             });
+			//retain small size of k logo in large screen
+			$('.klogo').addClass('col-sm-4');
+			 $('.klogo').addClass('col-xs-4');
+			 $('.klogo').removeClass('col-xs-8');
+			 $('.klogo').removeClass('col-sm-8');
         }
+		else{   //increase k logo size in mobile
+				$('.klogo').addClass('col-sm-8');
+				$('.klogo').addClass('col-xs-8');
+				$('.klogo').removeClass('col-xs-4');
+				$('.klogo').removeClass('col-sm-4');
+			}
     });
 </script>
 
