--- a/workshops.html
+++ b/workshops.html
@@ -16,6 +16,7 @@
 	<link rel='stylesheet' href="css/res.css">
 	<link rel='stylesheet' href="css/loader.css">
 	<link rel='stylesheet' href="css/initiatives.css">
+	<link rel='stylesheet' href="css/scroll.css">
 	<link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css'/>
 
 
@@ -236,14 +237,28 @@
 <script type="text/javascript" src="js/particleground.min.js"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
+		if($(window).width() >= 900){
+
             // initialize particles
             $('.particle').particleground({
             	dotColor: '#ffffff',
             	density: 20000,
             	proximity: 100
             });
-        });
-    </script>
+			//retain small size of k logo in large screen
+			$('.klogo').addClass('col-sm-4');
+			 $('.klogo').addClass('col-xs-4');
+			 $('.klogo').removeClass('col-xs-8');
+			 $('.klogo').removeClass('col-sm-8');
+        }
+		else{   //increase k logo size in mobile
+				$('.klogo').addClass('col-sm-8');
+				$('.klogo').addClass('col-xs-8');
+				$('.klogo').removeClass('col-xs-4');
+				$('.klogo').removeClass('col-sm-4');
+			}
+    });
+</script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <script>
